# AdmisionTech

./: .gitignore  ACERCA DEL PROYECTO.md  Abenchmark.csv  Documento de especificación técnica (versión 0.9).md  PROMPTS DEL PROYECTO.md  README.md  benchmark.csv
assets/: styles.css
backend/: CMakeLists.txt
backend/bindings/py/: CMakeLists.txt  pyevalcore.cp313-win_amd64.pyd  pyevalcore_binding.cpp  setup.py
backend/bindings/py/src/: pyevalcore.cp313-win_amd64.exp
backend/include/: evaluator.hpp
backend/src/: evaluator_cuda.cu  evaluator_openmp.cpp  evaluator_pthreads.cpp  evaluator_serial.cpp  main_cli.cpp
frontend/: AdmisionTech.spec  __init__.py  api_routes.py  benchmark_logic.py  bridge.py  bridge.spec  build_dashboard.bat  config_utils.py  dash_callbacks.py  dash_layout.py  evaluation_logic.py  requirements.txt  validation.py
frontend/utils/: logger.py
output/: evaluation_results.csv
scripts/: benchmark.py  create_test_data.py
src/: evaluator_cuda.cu
tests/: test_cuda.cpp  test_roundtrip.py  test_serial.cpp  test_validation.py
